--- a/yotam.ipynb
+++ b/yotam.ipynb
@@ -11,6 +11,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openbus import mapman"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "stops = pd.read_csv(\"./Yotam/israel-public-transportation/stops.txt\")\n",
+    "shapes = pd.read_csv(\"./Yotam/israel-public-transportation/shapes.txt\")\n",
+    "routes = pd.read_csv(\"./Yotam/israel-public-transportation/routes.txt\"); print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -23,9 +51,7 @@
     }
    ],
    "source": [
-    "stops = pd.read_csv(\"./israel-public-transportation/stops.txt\")\n",
-    "shapes = pd.read_csv(\"./israel-public-transportation/shapes.txt\")\n",
-    "routes = pd.read_csv(\"./israel-public-transportation/routes.txt\"); print(\"done\")"
+    "trips = pd.read_csv(\"./Yotam/israel-public-transportation/trips.txt\"); print(\"done\")"
    ]
   },
   {
@@ -42,43 +68,17 @@
     }
    ],
    "source": [
-    "trips = pd.read_csv(\"./israel-public-transportation/trips.txt\"); print(\"done\")"
+    "stop_times = pd.read_csv(\"./Yotam/israel-public-transportation/stop_times.txt\"); print(\"done\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
-   "source": [
-    "stop_times = pd.read_csv(\"./israel-public-transportation/stop_times.txt\"); print(\"done\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [],
    "source": [
     "route_id = 32\n",
     "stop_id = 36133"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import mapman"
    ]
   },
   {
@@ -93,6 +93,8 @@
     "        self.index = index\n",
     "        self.lat = stops[stops.stop_id == stop_id].stop_lat.unique()[0]\n",
     "        self.lon = stops[stops.stop_id == stop_id].stop_lon.unique()[0]\n",
+    "    def _repr_html_(self):\n",
+    "        return mapman.MapMan([self.lon, self.lat])._repr_html_()\n",
     "        \n",
     "class Route:\n",
     "    def __init__(self, route_id):\n",
@@ -114,6 +116,35 @@
     "\n",
     "sp = Stop(stop_id, 0)\n",
     "rt = Route(route_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35.034289, 32.791771000000004)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((sp.lon, sp.lat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mapman"
    ]
   },
   {
@@ -169,6 +200,18 @@
    "display_name": "Python 3.5",
    "language": "python",
    "name": "python3.5"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
